--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
-include manager/schema.sql
-include manager/init_db.sql
-graft manager/static
-graft manager/templates
+include bumger/schema.sql
+include bumger/init_db.sql
+graft bumger/static
+graft bumger/templates
 global-exclude *.pyc
